--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - DJANGO_VERSION=1.7.8
     - DJANGO_VERSION=1.8.2
 install:
+    - pip install 'django~=$DJANGO_VERSION'
     - python setup.py develop
     - pip list
 script:
