--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
   - '2.7'
-  - '3.2'
   - '3.3'
   - '3.4'
   - '3.5'
@@ -19,3 +18,9 @@ matrix:
   exclude:
     - python: '3.5'
       env: DJANGO_VERSION=1.7.0
+    - python: '3.3'
+      env: DJANGO_VERSION=1.4.0
+    - python: '3.4'
+      env: DJANGO_VERSION=1.4.0
+    - python: '3.5'
+      env: DJANGO_VERSION=1.4.0
