--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
   - DJANGO_VERSION=1.4.0
   - DJANGO_VERSION=1.7.0
   - DJANGO_VERSION=1.8.0
+  - DJANGO_VERSION=1.9.0
 install:
   - pip install django~=$DJANGO_VERSION
   - python setup.py develop
@@ -24,3 +25,5 @@ matrix:
       env: DJANGO_VERSION=1.4.0
     - python: '3.5'
       env: DJANGO_VERSION=1.4.0
+    - python: '3.3'
+      env: DJANGO_VERSION=1.9.0
